Fixes letter-spacing for mobile Adds breaks between logos

--- a/css/partners.css
+++ b/css/partners.css
@@ -12,7 +12,7 @@
 #partners-heading
 {
   border: 5px solid;
-  letter-spacing: 10px;
+  letter-spacing: 0.3em;
   padding-bottom: 10px;
 }
 
